--- a/MazeServ/public/sass/style.scss
+++ b/MazeServ/public/sass/style.scss
@@ -7,7 +7,7 @@
 @import 'partials/flashes';
 @import 'partials/nav';
 @import 'partials/table';
-@import 'partials/store';
+@import 'partials/maze';
 @import 'partials/tag';
 @import 'partials/single';
 @import 'partials/heart';
