--- a/MazeServ/views/mixins/_mazeForm.pug
+++ b/MazeServ/views/mixins/_mazeForm.pug
@@ -23,5 +23,5 @@ mixin mazeForm(maze = {})
     //-       - y++
     //-       - x = 0
     h2 Maze
-      pre(style="word-wrap: break-word; white-space: pre-wrap;") #{maze.drawing}
+      pre(style="name: mazeOnMain; word-wrap: break-word; white-space: pre-wrap;") #{maze.drawing}
 
