--- a/MazeServ/public/sass/partials/_helpers.scss
+++ b/MazeServ/public/sass/partials/_helpers.scss
@@ -5,7 +5,7 @@
 
 .button {
   border: 0;
-  background: $yellow;
+  background: $blue;
   color: $black;
   font-family: 'Panama';
   font-weight: 600;
