--- a/MazeServ/public/sass/partials/_maze.scss
+++ b/MazeServ/public/sass/partials/_maze.scss
@@ -30,8 +30,8 @@
 .maze__actions {
   position: relative;
   z-index: 2;
-  border-bottom: 1px solid rgba(0,0,0,0.2);
-  box-shadow: 0 1px 0 rgba(0,0,0,0.2), 0 1px 0 rgba(255,255,255,0.2);
+  border-bottom: 1px solid rgb(252, 5, 5);
+  box-shadow: 0 1px 0 rgb(248, 0, 0), 0 1px 0 rgba(255,255,255,0.2);
   margin-bottom: 50px;
   padding-top: 10px;
   padding-bottom: 20px;
@@ -68,10 +68,10 @@
     top: 0;
     right: 0;
     background:
-      linear-gradient(45deg, hsla(190, 95%, 43%, 1) 0%, hsla(190, 95%, 43%, 0) 70%),
+      linear-gradient(45deg, rgb(99, 214, 5) 0%, hsla(190, 95%, 43%, 0) 70%),
       linear-gradient(135deg, hsla(219, 93%, 48%, 1) 10%, hsla(219, 93%, 48%, 0) 80%),
-      linear-gradient(225deg, hsla(293, 93%, 48%, 1) 10%, hsla(293, 93%, 48%, 0) 80%),
-      linear-gradient(315deg, hsla(130, 96%, 45%, 1) 100%, hsla(130, 96%, 45%, 0) 70%);
+      linear-gradient(225deg, rgb(10, 1, 85) 10%, hsla(293, 93%, 48%, 0) 80%),
+      linear-gradient(315deg, rgb(236, 9, 9) 100%, hsla(130, 96%, 45%, 0) 70%);
     opacity: 0.6;
     z-index: 1;
     clip-path: polygon(0 0, 100% 0, 100% 90%, 0% 100%);
