--- a/MazeServ/public/sass/partials/_search.scss
+++ b/MazeServ/public/sass/partials/_search.scss
@@ -7,11 +7,11 @@
     position: absolute;
     width: 100%;
     top: 100%;
-    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    box-shadow: 0 0 10px rgb(252, 4, 4);
     z-index: 5;
   }
   &__input {
-    font-size: 30px;
+    font-size: 20px;
     background: none;
     color: white;
     outline: 0;
