--- a/MazeServ/views/layout.pug
+++ b/MazeServ/views/layout.pug
@@ -8,6 +8,33 @@ html
   body
     block header
       header.top
+        nav.nav
+          .nav__section.nav__section--pages
+            li.nav__item
+              a.nav__link.nav__link--logo(href="/")
+                != h.icon('logo')
+            each item in h.menu
+              li.nav__item
+                a.nav__link(href=item.slug, class=(currentPath.startsWith(item.slug) ? 'nav__link--active' : ''))
+                  != h.icon(item.icon)
+                  span #{item.title}
+          //- .nav__section.nav__section--search
+          //-   .search
+          //-     input.search__input(type="text" placeholder="Maze name, Date..." name="search")
+          //-     .search__results
+          .nav__section.nav__section--user
+            if user
+              //- li.nav__item: a.nav__link(href="/hearts", class=(currentPath.startsWith('/hearts') ? 'nav__link--active' : ''))
+              //-   != h.icon('heart')
+              //-   span.heart-count #{user.hearts && user.hearts.length}
+              li.nav__item: a.nav__link(href="/logout", class=(currentPath.startsWith('/logout') ? 'nav__link--active' : ''))
+                != h.icon('logout')
+                span Logout
+              li.nav__item: a.nav__link(href="/account", class=(currentPath.startsWith('/account') ? 'nav__link--active' : ''))
+                img.avatar(src=user.gravatar + 'd=retro')
+            else
+              li.nav__item: a.nav__link(href="/register", class=(currentPath.startsWith('/register') ? 'nav__link--active' : '')) Register
+              li.nav__item: a.nav__link(href="/login", class=(currentPath.startsWith('/login') ? 'nav__link--active' : '')) Log In
 
     block messages
       if locals.flashes
