09-26-2020 video and homework completed

--- a/MazeServ/views/mixins/_mazeForm.pug
+++ b/MazeServ/views/mixins/_mazeForm.pug
@@ -1,27 +1,18 @@
 mixin mazeForm(maze = {})
   form.form(action='/' method="POST")
     h2 Size
-    label(for="height") Height
-    input(type="text" name="height" value=maze.height, maxlength='6', style="witdh:5px" )
     label(for="width") Width
     input(type="text" name="width" value=maze.width, maxlength='6', style="witdh:5px")
+    label(for="height") Height
+    input(type="text" name="height" value=maze.height, maxlength='6', style="witdh:5px" )
+
     
     input(type="submit" value="Get a Maze" class="button")
     - var x = 0
     - var y = 0
 
-    //- #table-wrapper
-    //-   table( border='1', width='100%')
-    //-     tr( border='1' width='100%')
-    //-       th Maze
-    //-   table(border='1')
-    //-     while y <= maze.width
-    //-       tr
-    //-         while x <= maze.height
-    //-           td &nbsp; &nbsp;
-    //-           - x++
-    //-       - y++
-    //-       - x = 0
     h2 Maze
-      pre(style="name: mazeOnMain; word-wrap: break-word; white-space: pre-wrap;") #{maze.drawing}
+      p !{maze.drawing}
 
+  form.form(action='/saveSave' method="POST")
+    input(type="submit" value="Save To My Mazes" class="button")
